--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "react-redux": "^7.2.5",
+    "reduce-reducers": "^1.0.4",
     "redux": "^4.1.1"
   }
 }
