--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
+    "@types/d3": "^7.1.0",
+    "@types/d3-geo": "^3.0.2",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.3",
     "@types/react": "^17.0.27",
@@ -50,6 +52,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
+    "d3": "^7.1.1",
+    "d3-geo": "^3.0.1",
     "react-redux": "^7.2.5",
     "reduce-reducers": "^1.0.4",
     "redux": "^4.1.1"
