--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "@reduxjs/toolkit": "^1.6.2",
     "d3": "^7.1.1",
     "d3-geo": "^3.0.1",
+    "react-dropdown": "^1.9.2",
     "react-redux": "^7.2.5",
+    "react-tooltip": "^4.2.21",
     "reduce-reducers": "^1.0.4",
     "redux": "^4.1.1"
   }
