--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "d3-geo": "^3.0.1",
     "react-dropdown": "^1.9.2",
     "react-redux": "^7.2.5",
+    "react-tabs": "^3.2.2",
     "react-tooltip": "^4.2.21",
     "reduce-reducers": "^1.0.4",
     "redux": "^4.1.1"
